--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <body>
     <center id='top'><h1>Max&nbsp;Johnson&nbsp;Lowther</h1></center>
     <center id='bop'>Cambridge<span class='dot'></span>MIT<span</center>
-    <center id='fop'><a href='https://instagram.com/max_lowther'><img src='instagram.gif' id='instagram'></a><a href='https://twitter.com/maxlowther'><img src='twitter.png' id='twitter'></a><a href='https://www.linkedin.com/in/mlowther'><img src='linkedin.png'></a></center>
+    <center id='fop'><a href='https://instagram.com/max_lowther'><img src='images/instagram.gif' id='instagram'></a><a href='https://twitter.com/maxlowther'><img src='images/twitter.png' id='twitter'></a><a href='https://www.linkedin.com/in/mlowther'><img src='images/linkedin.png'></a></center>
   </body>
 </html>
 
