--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>majolo</title>
-    <meta charset="utf-8"> 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
     <style>
       html {
         background: #1BA39C;
