Added github link

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <center id='bop'>Cambridge<span class='dot'></span>MIT<span</center>
     <center id='fop'>
         <a href='https://twitter.com/maxlowther'><img src='images/twitter.png' id='twitter'></a>
+        <a href='https://www.github.com/majolo'><img src='images/github.png'></a>
         <a href='https://instagram.com/max_lowther'><img src='images/instagram.gif' id='instagram'></a>
         <a href='https://www.linkedin.com/in/mlowther'><img src='images/linkedin.png'></a>
     </center>
