--- a/snake.html
+++ b/snake.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <canvas id="gc" width="400" height="400"></canvas>
 <script>
 window.onload=function() {
@@ -93,3 +95,4 @@ function keyPush(evt) {
     }
 }
 </script>
+</html>
