Update snake header

--- a/snake.html
+++ b/snake.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <title>snake</title>
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 <canvas id="gc" width="400" height="400"></canvas>
 <script>
 window.onload=function() {
