--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Word Game</title><link href="/static/css/main.5f361e03.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,p,l=r[0],a=r[1],f=r[2],c=0,s=[];c<l.length;c++)p=l[c],Object.prototype.hasOwnProperty.call(o,p)&&o[p]&&s.push(o[p][0]),o[p]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var a=t[l];0!==o[a]&&(n=!1)}n&&(u.splice(r--,1),e=p(p.s=t[0]))}return e}var n={},o={1:0},u=[];function p(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,p),t.l=!0,t.exports}p.m=e,p.c=n,p.d=function(e,r,t){p.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},p.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},p.t=function(e,r){if(1&r&&(e=p(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(p.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)p.d(t,n,function(r){return e[r]}.bind(null,n));return t},p.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return p.d(r,"a",r),r},p.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},p.p="/";var l=this["webpackJsonpmy-app"]=this["webpackJsonpmy-app"]||[],a=l.push.bind(l);l.push=r,l=l.slice();for(var f=0;f<l.length;f++)r(l[f]);var i=a;t()}([])</script><script src="/static/js/2.8cb2deab.chunk.js"></script><script src="/static/js/main.7d309492.chunk.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>majolo</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:300">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+    <style>
+      html {
+        background: #1BA39C;
+        color: white;
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+      }
+      h1 {
+        background: #0d8f89;
+        border-radius: 0.3rem;
+        padding: 0.3rem 0.5rem;
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+        margin: 0;
+      }
+      .clover {
+        height: 2.9rem;
+        width: 2.9rem;
+        margin: 0.1rem 1.1rem;
+      }
+      #top * {
+        display: inline-block;
+        vertical-align: top;
+        margin-top: 5rem;
+      }
+      #bop {
+        margin-top: 0.8rem;
+        font-size: 0.85rem;
+      }
+      #fop {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2rem;
+        padding-bottom: 1rem;
+        transform: scale(0.75,0.75);
+      }
+      #fop img {
+        height: 2rem;
+        margin: 0 0.6rem;
+      }
+      #fop img#twitter {
+        height: 1.5rem;
+        margin-bottom: 0.25rem;
+      }
+      .dot:before {
+        content: " / ";
+        color: #0d8f89;
+      }
+      @media (max-width: 321px) {
+        #fop {
+          position: static;
+          margin-top: 5rem;
+        }
+        #fop img {
+          height: 3rem;
+          margin: 0 1rem;
+        }
+        #fop img#twitter {
+          height: 2.5rem;
+          margin-bottom: 0.25rem;
+        }
+      }
+      @media (min-width: 320px) {
+        html {
+          font-size: 10px;
+        }
+      }
+      @media (min-width: 320px) and (orientation: landscape) {
+        html {
+          font-size: 15px;
+        }
+      }
+      @media (min-width: 589px) {
+        html {
+          font-size: 20px;
+        }
+      }
+      @media (min-width: 733px) {
+        html {
+          font-size: 25px;
+        }
+      }
+      @media (min-width: 870px) {
+        html {
+          font-size: 30px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <center id='top'><h1>Max&nbsp;Johnson&nbsp;Lowther</h1></center>
+    <center id='bop'>Cambridge<span class='dot'></span>MIT<span</center>
+    <center id='fop'>
+        <a href='https://twitter.com/maxlowther'><img src='images/twitter.png' id='twitter'></a>
+        <a href='https://www.github.com/majolo'><img src='images/github.png'></a>
+        <a href='https://instagram.com/max_lowther'><img src='images/instagram.gif' id='instagram'></a>
+        <a href='https://www.linkedin.com/in/mlowther'><img src='images/linkedin.png'></a>
+    </center>
+  </body>
+</html>
